# cinetpay-sdk

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  cinetpay-sandbox-contract.md  installing-from-github.md  sandbox-testing.md  secure-credentials.md
examples/: basic_usage.py
harness/scenarios/: balances_flexible_shape.json  payment_direct_failed.json  payment_status_retry_after_expired_token.json  payment_web_redirect.json  transfer_success.json
scripts/: run_harness.py  run_quality.py  sandbox_cli.py
src/cinetpay_sdk/: __init__.py  client.py  exceptions.py  harness.py  models.py  transport.py
tests/: test_architecture.py  test_client.py  test_client_internal.py  test_documentation.py  test_exceptions.py  test_harness.py  test_harness_internal.py  test_models.py  test_sandbox_cli.py  test_transport.py
